<resources>
    <string name="app_name">SortIt</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SortIt</string>
    <string name="nav_header_subtitle">Sorting stuff for you</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="c1_button_label">HL1</string>
    <string name="c2_button_label">HL2</string>
    <string name="c3_button_label">HL3</string>
    <string name="c4_button_label">SB1</string>
    <string name="c5_button_label">SB2</string>
    <string name="c6_button_label">SA</string>
    <string name="c7_button_label">QS</string>
    <string name="menu_process">Process</string>
    <string name="menu_stats">Statistics</string>
    <string name="menu_commands">Commands</string>
</resources>
