<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_process">

    <fragment
        android:id="@+id/nav_process"
        android:name="com.example.sortit.ui.Process.ProcessFragment"
        android:label="@string/menu_process"
        tools:layout="@layout/fragment_process" />

    <fragment
        android:id="@+id/nav_stats"
        android:name="com.example.sortit.ui.Statistics.StatsFragment"
        android:label="@string/menu_stats"
        tools:layout="@layout/fragment_stats" />


    <fragment
        android:id="@+id/nav_commands"
        android:name="com.example.sortit.ui.CommandInterface.CommandFragment"
        android:label="@string/menu_commands"
        tools:layout="@layout/fragment_command" />

</navigation>