<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_command"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/c7_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c7_button_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.919"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.922" />

    <Switch
        android:id="@+id/c6_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/c6_button_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.569"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.928" />

    <Button
        android:id="@+id/c5_button"
        android:layout_width="65dp"
        android:layout_height="45dp"
        android:background="@color/SB2_off"
        android:text="@string/c5_button_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.341"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.918" />

    <Button
        android:id="@+id/c4_button"
        android:layout_width="65dp"
        android:layout_height="45dp"
        android:background="@color/SB1_off"
        android:text="@string/c4_button_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.918" />

    <LinearLayout
        android:layout_width="153dp"
        android:layout_height="69dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.832">

        <LinearLayout
            android:layout_width="45dp"
            android:layout_height="61dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/view_c1_light"
                android:layout_width="44dp"
                android:layout_height="42dp"
                android:background="@color/HL1_off" />

            <TextView
                android:id="@+id/text_c1_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c1_button_label" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="45dp"
            android:layout_height="61dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/view_c2_light"
                android:layout_width="44dp"
                android:layout_height="42dp"
                android:background="@color/HL2_off" />

            <TextView
                android:id="@+id/text_c2_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:text="@string/c2_button_label" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="45dp"
            android:layout_height="61dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/view_c3_light"
                android:layout_width="44dp"
                android:layout_height="42dp"
                android:background="@color/HL3_off" />

            <TextView
                android:id="@+id/text_c3_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c3_button_label" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Start reading"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="461dp" />

    <ImageView
        android:id="@+id/bkg"
        android:layout_width="337dp"
        android:layout_height="460dp"
        android:background="@drawable/scrren1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>